# Polymarketbot

./: .env.example  .gitignore  Makefile  README.md  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py
api/: main.py  run.py
docs/: MainDocPolybot.txt  POLYMARKETSAPIDOCS.TXT  alpha1.0.txt  alpha1.5
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  MarketDetail.tsx  Markets.tsx  NotFound.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/styles/: Dashboard.css  MarketDetail.css  Settings.css  global.css
scripts/: test_api.sh
services/: __init__.py
services/api/: __init__.py  ingest  main.py
services/auth/: __init__.py  exceptions.py  poly_auth.py  setup_api_key.py  test_credentials.py
services/ingest/: __init__.py  config.py  main.py  market_data.py  requirements.txt  storage.py  test_health.sh  test_ws.py  websocket.py
shared/config/: settings.py
tests/: test_market_data.py
