[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarketbot"
version = "0.1.0"
description = "Automated trading bot for Polymarket"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "py-clob-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "structlog>=21.5.0",
    "asyncpg>=0.27.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto" 